Bug 763617 - Don't propagate an error code from GetCharsetAlias. r=smontagu