intl/uconv/src/nsCharsetConverterManager.cpp
@@ -177,9 +177,8 @@ nsCharsetConverterManager::GetUnicodeDecoder(const char * aSrc,
   nsCAutoString charset;
 
   // fully qualify to possibly avoid vtable call
-  nsresult rv = nsCharsetConverterManager::GetCharsetAlias(aSrc, charset);
-  if (NS_FAILED(rv))
-    return rv;
+  if (NS_FAILED(nsCharsetConverterManager::GetCharsetAlias(aSrc, charset)))
+    return NS_ERROR_UCONV_NOCONV;
 
   return nsCharsetConverterManager::GetUnicodeDecoderRaw(charset.get(),
                                                          aResult);
